<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="0dip" 
    android:orientation="vertical" >
    
    <!-- Title -->
    	<TextView android:layout_width="match_parent" 
        	android:layout_height="wrap_content"
        	android:textAppearance="@style/info_item_label"
        	android:layout_marginLeft="@dimen/tag_info_item_left_cut"
        	android:layout_marginTop="0dip"
        	android:text="@string/edit_view_vevent_title_label"/>
    	<View android:layout_width="match_parent"
        	android:layout_height="@dimen/tag_info_lable_content_separator_width"
        	android:background="@color/tag_info_lable_content_separator_color"/>
    	<TextView android:id="@+id/read_info_vevent_title"
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content"
        	android:textAppearance="@style/info_item"
        	android:layout_marginLeft="@dimen/tag_info_item_left_cut"
        	android:layout_marginTop="0dip"/>
        
    	<!-- Start time -->
    	<TextView android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:textAppearance="@style/info_item_label"
        	android:layout_marginLeft="@dimen/tag_info_item_left_cut"
        	android:layout_marginTop="20dip"
        	android:text="@string/edit_view_vcard_start_time_label"/>
    	<View android:layout_width="match_parent"
        	android:layout_height="@dimen/tag_info_lable_content_separator_width"
        	android:background="@color/tag_info_lable_content_separator_color"/>
    	<TextView android:id="@+id/read_info_vevent_start_time"
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content"
        	android:textAppearance="@style/info_item"
        	android:layout_marginLeft="@dimen/tag_info_item_left_cut"
        	android:layout_marginTop="0dip"
        	android:inputType="phone"/>
    
    	<!-- End time -->
    	<TextView android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:textAppearance="@style/info_item_label"
        	android:layout_marginLeft="@dimen/tag_info_item_left_cut"
        	android:layout_marginTop="20dip"
        	android:text="@string/edit_view_vevent_end_time_label"/>
    	<View android:layout_width="match_parent"
        	android:layout_height="@dimen/tag_info_lable_content_separator_width"
        	android:background="@color/tag_info_lable_content_separator_color"/>
    	<TextView android:id="@+id/read_info_vevent_end_time"
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content"
        	android:textAppearance="@style/info_item"
        	android:layout_marginLeft="@dimen/tag_info_item_left_cut"
        	android:layout_marginTop="0dip"/>
    	
    	<!-- Event location -->
    	<TextView android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:textAppearance="@style/info_item_label"
        	android:layout_marginLeft="@dimen/tag_info_item_left_cut"
        	android:layout_marginTop="20dip"
        	android:text="@string/edit_view_vevent_location_label"/>
    	<View android:layout_width="match_parent"
        	android:layout_height="@dimen/tag_info_lable_content_separator_width"
        	android:background="@color/tag_info_lable_content_separator_color"/>
    	<TextView android:id="@+id/read_info_vevent_location"
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content"
        	android:textAppearance="@style/info_item"
        	android:layout_marginLeft="@dimen/tag_info_item_left_cut"
        	android:layout_marginTop="0dip"/>
    	
    	<!-- Event description -->
    	<TextView android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:textAppearance="@style/info_item_label"
        	android:layout_marginLeft="@dimen/tag_info_item_left_cut"
        	android:layout_marginTop="20dip"
        	android:text="@string/edit_view_vevent_description_label"/>
    	<View android:layout_width="match_parent"
        	android:layout_height="@dimen/tag_info_lable_content_separator_width"
        	android:background="@color/tag_info_lable_content_separator_color"/>
    	<TextView android:id="@+id/read_info_vevent_description"
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content"
        	android:textAppearance="@style/info_item"
        	android:layout_marginLeft="@dimen/tag_info_item_left_cut"
        	android:layout_marginTop="0dip"/>
    
</LinearLayout>
</ScrollView>