<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">
<LinearLayout 
    android:orientation="vertical" 
    android:background="@color/main_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip">
   <!-- 
    android:gravity="center_vertical"
    -->
    <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:orientation="horizontal" 
        android:gravity="center_horizontal">
        <!-- Orange eWallet -->
        <LinearLayout 
            android:id="@+id/launcher_ewallet"
            android:layout_width="140dip" 
            android:layout_height="140dip"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_info"
            android:layout_margin="10dip">
            <ImageView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_ewallet"/>
            <TextView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:text="@string/entrance_ewallet"/>
        </LinearLayout>
        
        <!-- Tag writing -->
        <LinearLayout 
            android:id="@+id/launcher_writing"
            android:layout_width="140dip" 
            android:layout_height="140dip"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_info"
            android:layout_margin="10dip">
            <ImageView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_writing"/>
            <TextView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:text="@string/entrance_writing"/>
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:orientation="horizontal" 
        android:gravity="center_horizontal">
        <!-- Settings -->
        <LinearLayout 
            android:id="@+id/launcher_settings"
            android:layout_width="140dip" 
            android:layout_height="140dip"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_info"
            android:layout_margin="10dip">
            <ImageView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_settings"/>
            <TextView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:text="@string/entrance_settings"/>
        </LinearLayout>
        
        <!-- Tag history -->
        <LinearLayout 
            android:id="@+id/launcher_history"
            android:layout_width="140dip" 
            android:layout_height="140dip"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_info"
            android:layout_margin="10dip">
            <ImageView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_history"/>
            <TextView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:text="@string/entrance_history"/>
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>
    
</ScrollView>