<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="0dip" 
    android:orientation="vertical" >
    
    <TextView android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="@dimen/tag_info_item_left_cut"
        android:textAppearance="@style/info_item_label"
        android:text="@string/edit_view_url_desc_label"/>
    <View android:layout_width="match_parent"
        android:layout_height="@dimen/tag_info_lable_content_separator_width"
        android:background="@color/tag_info_lable_content_separator_color"/>
    <EditText android:id="@+id/edit_info_url_desc"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="20dip"/>
    
    <TextView android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tag_info_item_left_cut"
        android:textAppearance="@style/info_item_label"
        android:text="@string/edit_view_url_address_label"/>
    <View android:layout_width="match_parent"
        android:layout_height="@dimen/tag_info_lable_content_separator_width"
        android:background="@color/tag_info_lable_content_separator_color"/>
    <EditText android:id="@+id/edit_info_url_address"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:inputType="textUri"
        android:layout_marginBottom="10dip"/>
    
    <LinearLayout android:id="@+id/edit_info_url_bookmark_selector"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:orientation="horizontal" 
        android:layout_marginTop="50dip"
        android:background="@drawable/btn_default_holo_light"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center_vertical">
        <ImageView 
            android:clickable="false"
            android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:src="@drawable/ic_edit_info_url_bookmark_select"/>
    	<TextView android:layout_width="0dip" 
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:layout_marginTop="10dip"
        	android:textSize="20sp"
        	android:text="@string/edit_view_url_bookmark_desc"/>
    </LinearLayout>
    
</LinearLayout>
</ScrollView>